# kompile

./: .gitignore  .mcp.json.kompile-backup  AGENTS.md  AGENT_PROMPT.md  ANSERINI_MODEL_DOWNLOADER.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COMPONENT_INSTALL_GUIDE.md  CUDA_GRAPH_FIX_HANDOFF.md  DEBUG_OPS_PROMPT.md  GPU_TRANSFER_OVERHEAD_ANALYSIS.md  KOMPILE_MODEL_STAGING_DESIGN.md  KOMPILE_MULTITASK_DIAGNOSIS.md  KOMPILE_MULTITASK_FIX_HANDOFF.md  KOMPONENT_CLI_SUMMARY.md  OCR_MODULE_DESIGN.md  OPENCODE_IMPORT_EXPORT_FIX.md  README.md  RESEARCH_FEATURE_DELTA.md  ROLE_SYSTEM_IMPLEMENTATION.md  SAMEDIFF_LLM_PIPELINE_FRAMEWORK.md  SESSION_IMPORT_DESIGN.md  SESSION_IMPORT_IMPLEMENTATION.md  SESSION_IMPORT_PHASE1_COMPLETE.md  SESSION_IMPORT_PHASE2_COMPLETE.md  STAGING_VLM_TASK.md  build-dist.sh  convert_pytorch_2.py  dev-restart.sh  download-anserini-models.sh  download-install-gcc.sh.3  example-v1.txt  example-v2.txt  install.sh  jeprof.1627601.0.f.heap  jeprof.1631646.0.f.heap  jeprof.1633566.0.f.heap  logfile  model-convert.sh  model-deployment.md  (+4 more)
.github/workflows/: build-native-linux-arm64.yml  build-native-linux-cuda.yml  build-native-linux-x86_64.yml  build-native-mac-arm64.yml  build-native-windows-cuda.yml  build-native-windows-x86_64.yml  publish-release.yml  release.yml
.kompile/task-results/: qwen-20260412-062552.md  qwen-20260412-074700.md
.qwen/: settings.json.orig
ADRs/: Optimized Configuration Files Generation - 0004.md
FP&A workflow artifacts 2026-05/: 01_ingestion_view.html  01_ingestion_view_ja.html  02_process_map.BACKUP_pre_semantic.html  02_process_map_ja.html  03_workflow_designer_and_dashboard_ja.html  06_inbox.html  06b_email_EMEA.html  06c_email_APAC.html  07_platform_stack.html  09_process_map_KAA.html  10_semantic_layer_DRAFT.html  11b_interview_J.Park_demo_ja.md
anserini/: pom.xml
build-scripts/: Dockerfile.cpu  Dockerfile.cuda  build-common.sh  build-kompile-all.sh  build-kompile-cpu-arm.sh  build-kompile-cpu-full.sh  build-kompile-cpu-onednn.sh  build-kompile-cpu.sh  build-kompile-cuda-12.6.sh  build-kompile-cuda-13.1.sh  build-kompile-cuda-full.sh  build-kompile-cuda.sh  build-kompile-docker.sh  build-kompile-macos.sh  build-kompile-native-only.sh  build-kompile-platform.sh  build-kompile-rocm.sh  build-kompile-windows-cuda.sh  build-kompile-windows.sh
cmake-3.25.0/: bootstrap  configure
cmake-3.25.0/Modules/: Squish4RunTestCase.sh  SquishRunTestCase.sh
cmake-3.25.0/Source/: CMakeVersion.bash  CMakeVersion.cmake
cmake-3.25.0/Tests/: CTestUpdateGIT.sh.in
demos/rag-quickstart/: query.sh  setup.sh  teardown.sh
dl4j-build/: pom.xml
docs/: ARCHITECTURE.md  README.md  SUMMARY.md  all.html  beyond-rag-part2-presentation.html  beyond-rag-presentation.html  bootstrap.html  build-clone-build.html  build-generate-image-and-sdk.html  build-native-image-generate.html  build-pipeline-command-generate.html  build-pom-generate.html  build.html  clone-build.html  config-generate-python-config.html  config-generate-python-variable-config.html  config.html  convert.html  dl4j-summary.html  exec-inference-server-create.html  exec-pipeline-generate.html  exec-sequence-pipeline-creator.html  exec-step-create-CAMERA_FRAME_CAPTURE.html  exec-step-create-CLASSIFIER_OUTPUT.html  exec-step-create-CROP_FIXED_GRID.html  exec-step-create-CROP_GRID.html  exec-step-create-DL4J.html  exec-step-create-DRAW_BOUNDING_BOX.html  exec-step-create-DRAW_FIXED_GRID.html  exec-step-create-DRAW_GRID.html  exec-step-create-DRAW_HEATMAP.html  exec-step-create-DRAW_POINTS.html  exec-step-create-DRAW_SEGMENTATION.html  exec-step-create-EXTRACT_BOUNDING_BOX.html  exec-step-create-GRAY_SCALE.html  exec-step-create-IMAGE_CROP.html  exec-step-create-IMAGE_RESIZE.html  exec-step-create-IMAGE_TO_NDARRAY.html  exec-step-create-KERAS.html  exec-step-create-LOGGING.html  (+105 more)
docs/architecture/: README.md
docs/cli/: README.md  app-commands.md  build-app.md  chat.md  cloud.md  enforcer.md  graph-commands.md  ingestion.md  knowledge.md  manage.md  models.md  pipelines.md  sdk.md  sessions.md
docs/concepts/: README.md  (+9 more)
gcc/: bootstrap-gcc-glibc.sh  build-gcc-glibc-archives.sh
index/: postgresql.conf  postmaster.opts
index2/: postgresql.conf  postmaster.opts  postmaster.pid
kompile/: Dockerfile  pom.xml
kompile-agent-cli/: pom.xml
kompile-app/: pom.xml
kompile-app-cli/: pom.xml
kompile-c-library/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.c  rebuild-and-link.sh
kompile-cli/: .factorypath  .project  AGENTS.md  README.md  pom.xml
kompile-cli-common/: pom.xml
kompile-cli-plugin-api/: pom.xml
kompile-component-cli/: README.md  pom.xml
kompile-config-generator/: README.md  pom.xml
kompile-cpu-graph-test/: .gitignore  README.md  pom.xml
kompile-demo/: README.md  run-demo.sh
kompile-dist/: pom.xml
kompile-e2e-tests/: pom.xml
kompile-fnb/: README.md  pom.xml
kompile-fpna/: README.md  pom.xml
kompile-model-cli/: pom.xml
kompile-model-importer-keras/: pom.xml
kompile-model-importer-onnx/: pom.xml
kompile-model-importer-tensorflow/: pom.xml
kompile-model-importers/: pom.xml
kompile-pipelines-framework/: pom.xml
kompile-project-store/: pom.xml
kompile-python/: README.md  setup.py
kompile-rag-builds/: jeprof.1627600.0.f.heap  jeprof.1631645.0.f.heap  jeprof.1633565.0.f.heap
kompile-sdk-serving/: pom.xml
kompile-utils/: pom.xml
kompile-vlm-demo/: README.md  run-demo.sh
kompile_tensorflow/: requirements.txt
model-conversion-utility/: build-fix.sh  pom.xml  simple-build.sh  targeted-build.sh
scripts/: test-env-propagation.sh
tokenizers-rust/: .gitignore  pom.xml
tokenizers-rust/libtokenizers/: CMakeLists.txt  assembly.xml  buildnativetokenizers.sh  pom.xml  tokenizers.pc.in
tokenizers-rust/libtokenizers/include/: model_manager.h  tokenizer_wrapper.h  tokenizers_c.h  tokenizers_ffi.h
tokenizers-rust/libtokenizers/src/: model_manager.cpp  tokenizer_wrapper.cpp  tokenizers_c.cpp
tokenizers-rust/libtokenizers/tokenizers-ffi/: Cargo.toml  cbindgen.toml
tokenizers-rust/libtokenizers/tokenizers-ffi/src/: lib.rs
(+8740 files in other folders)
