[package]
name = "tokenizers-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for HuggingFace tokenizers library"
license = "Apache-2.0"

[lib]
name = "tokenizers_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokenizers = { path = "../tokenizers", default-features = false, features = ["progressbar", "onig"] }
serde_json = "1.0"
libc = "0.2"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
